@@ -24,6 +24,7 @@ Changes in 3.1.3 --
   - fixed search of generated files on macOS for some Unicode file names
   - fixed selection of Python on macOS:
     - select the system Python 2 or 3 according to LilyPond's version
+    - support MacPorts' LilyPond tools
 
 
 Changes in 3.1.2 -- Easter 2020
